Agrego salones + usuarios en el seeder